--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <header>
       <nav>
         <!-- left div -->
-        <div class="top-heaging">
+        <div>
           <h2>Influencer products</h2>
         </div>
         <!-- right div -->
@@ -24,11 +24,34 @@
           <li><a href="">Products</a></li>
           <li><a href="">Sign up</a></li>
           <li><a href="">Log In</a></li>
-          <li><i class="bx bx-search   nav-icon"></i></li>
+          <li><i class="bx bx-search nav-icon"></i></li>
           <li><i class="bx bx-cart-alt nav-icon"></i></li>
         </ul>
       </nav>
     </header>
     <!-- header end -->
+    <!-- main start -->
+    <main>
+      <!-- first section start -->
+      <section class="conteinar">
+        <div class="first-left">
+          <h1 class="top-heading-1">
+            Start your Journey as <br />
+            Influencer
+          </h1>
+          <p class="top-paragraph">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem <br />
+            vestibulum sed scelerisque eros. Lectus faucibus.
+          </p>
+          <a class="top-ancor" href="">Preebook now <i class="bx bx-right-arrow-alt"></i></a>
+        </div>
+        <div class="first-left">
+          <img src="images/Circle design.svg" alt="" />
+          <img class="img-2" src="images/main-camera.png" alt="" />
+        </div>
+      </section>
+      <!-- first section end -->
+    </main>
+    <!-- main end -->
   </body>
 </html>
