--- a/index.html
+++ b/index.html
@@ -51,6 +51,19 @@
         </div>
       </section>
       <!-- first section end -->
+      <!-- second section start -->
+
+      <section class="conteinar-2">
+        <img src="logos/Alibaba.svg" alt="" />
+        <img src="logos/Amazon.svg" alt="" />
+        <img src="logos/Daraz.pk Logo.svg" alt="" />
+        <img src="logos/Ebay.svg" alt="" />
+        <img src="logos/Rakuten.svg" alt="" />
+        <img src="logos/Target.svg" alt="" />
+        <img src="logos/Walmart.svg" alt="" />
+      </section>
+
+      <!-- second section end -->
     </main>
     <!-- main end -->
   </body>
