--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
       </section>
       <!-- first section end -->
       <!-- second section start -->
-
       <section class="conteinar-2">
         <img src="logos/Alibaba.svg" alt="" />
         <img src="logos/Amazon.svg" alt="" />
@@ -62,8 +61,251 @@
         <img src="logos/Target.svg" alt="" />
         <img src="logos/Walmart.svg" alt="" />
       </section>
-
       <!-- second section end -->
+
+      <!-- thord section start -->
+      <section class="conteinar-3">
+        <h1>Popular Collection</h1>
+        <div class="all-camera">
+          <div class="camera">
+            <div class="camera-img">
+              <img src="images/action.png" alt="" />
+            </div>
+            <div class="all-info">
+              <div class="camera-info">
+                <h2>Flex Tripod</h2>
+                <h2>$50.48</h2>
+              </div>
+              <div>
+                <i class="bx bxs-star field"></i>
+                <i class="bx bxs-star field"></i>
+                <i class="bx bxs-star field"></i>
+                <i class="bx bxs-star field"></i>
+                <i class="bx bxs-star bxs-star-half field"></i>
+                <span>4.99</span>
+                <p>
+                  Worldwide shifting <br />
+                  available <br />
+                  Buyers protection possible!
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="camera">
+            <div class="camera-img">
+              <img src="images/airpod.png" alt="" />
+            </div>
+            <div class="all-info">
+              <div class="camera-info">
+                <h2>Flex Tripod</h2>
+                <h2>$50.48</h2>
+              </div>
+              <div>
+                <i class="bx bxs-star field"></i>
+                <i class="bx bxs-star field"></i>
+                <i class="bx bxs-star field"></i>
+                <i class="bx bxs-star field"></i>
+                <i class="bx bxs-star bxs-star-half field"></i>
+                <span>4.99</span>
+                <p>
+                  Worldwide shifting <br />
+                  available <br />
+                  Buyers protection possible!
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="camera">
+            <div class="camera-img">
+              <img src="images/camera.png" alt="" />
+            </div>
+            <div class="all-info">
+              <div class="camera-info">
+                <h2>Flex Tripod</h2>
+                <h2>$50.48</h2>
+              </div>
+              <div>
+                <i class="bx bxs-star field"></i>
+                <i class="bx bxs-star field"></i>
+                <i class="bx bxs-star field"></i>
+                <i class="bx bxs-star field"></i>
+                <i class="bx bxs-star bxs-star-half field"></i>
+                <span>4.99</span>
+                <p>
+                  Worldwide shifting <br />
+                  available <br />
+                  Buyers protection possible!
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="camera">
+            <div class="camera-img">
+              <img src="images/drone.png" alt="" />
+            </div>
+            <div class="all-info">
+              <div class="camera-info">
+                <h2>Flex Tripod</h2>
+                <h2>$50.48</h2>
+              </div>
+              <div>
+                <i class="bx bxs-star field"></i>
+                <i class="bx bxs-star field"></i>
+                <i class="bx bxs-star field"></i>
+                <i class="bx bxs-star field"></i>
+                <i class="bx bxs-star bxs-star-half field"></i>
+                <span>4.99</span>
+                <p>
+                  Worldwide shifting <br />
+                  available <br />
+                  Buyers protection possible!
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="camera">
+            <div class="camera-img">
+              <img src="images/tripod.png" alt="" />
+            </div>
+            <div class="all-info">
+              <div class="camera-info">
+                <h2>Flex Tripod</h2>
+                <h2>$50.48</h2>
+              </div>
+              <div>
+                <i class="bx bxs-star field"></i>
+                <i class="bx bxs-star field"></i>
+                <i class="bx bxs-star field"></i>
+                <i class="bx bxs-star field"></i>
+                <i class="bx bxs-star bxs-star-half field"></i>
+                <span>4.99</span>
+                <p>
+                  Worldwide shifting <br />
+                  available <br />
+                  Buyers protection possible!
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="camera">
+            <div class="camera-img">
+              <img src="images/lights.png" alt="" />
+            </div>
+            <div class="all-info">
+              <div class="camera-info">
+                <h2>Flex Tripod</h2>
+                <h2>$50.48</h2>
+              </div>
+              <div>
+                <i class="bx bxs-star field"></i>
+                <i class="bx bxs-star field"></i>
+                <i class="bx bxs-star field"></i>
+                <i class="bx bxs-star field"></i>
+                <i class="bx bxs-star bxs-star-half field"></i>
+                <span>4.99</span>
+                <p>
+                  Worldwide shifting <br />
+                  available <br />
+                  Buyers protection possible!
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="camera">
+            <div class="camera-img">
+              <img src="images/mic.png" alt="" />
+            </div>
+            <div class="all-info">
+              <div class="camera-info">
+                <h2>Flex Tripod</h2>
+                <h2>$50.48</h2>
+              </div>
+              <div>
+                <i class="bx bxs-star field"></i>
+                <i class="bx bxs-star field"></i>
+                <i class="bx bxs-star field"></i>
+                <i class="bx bxs-star field"></i>
+                <i class="bx bxs-star bxs-star-half field"></i>
+                <span>4.99</span>
+                <p>
+                  Worldwide shifting <br />
+                  available <br />
+                  Buyers protection possible!
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="camera">
+            <div class="camera-img">
+              <img src="images/setup.png" alt="" />
+            </div>
+            <div class="all-info">
+              <div class="camera-info">
+                <h2>Flex Tripod</h2>
+                <h2>$50.48</h2>
+              </div>
+              <div>
+                <i class="bx bxs-star field"></i>
+                <i class="bx bxs-star field"></i>
+                <i class="bx bxs-star field"></i>
+                <i class="bx bxs-star field"></i>
+                <i class="bx bxs-star bxs-star-half field"></i>
+                <span>4.99</span>
+                <p>
+                  Worldwide shifting <br />
+                  available <br />
+                  Buyers protection possible!
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="camera">
+            <div class="camera-img">
+              <img src="images/single-light.png" alt="" />
+            </div>
+            <div class="all-info">
+              <div class="camera-info">
+                <h2>Flex Tripod</h2>
+                <h2>$50.48</h2>
+              </div>
+              <div>
+                <i class="bx bxs-star field"></i>
+                <i class="bx bxs-star field"></i>
+                <i class="bx bxs-star field"></i>
+                <i class="bx bxs-star field"></i>
+                <i class="bx bxs-star bxs-star-half field"></i>
+                <span>4.99</span>
+                <p>
+                  Worldwide shifting <br />
+                  available <br />
+                  Buyers protection possible!
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <div class="ancor-end">
+        <a href="">See More</a>
+        <i class="bx bx-right-arrow-alt lest"></i>
+      </div>
+      <!-- thord section end -->
+
+      <!-- fourth sectio start -->
+      <section class="conteinar conteinar-4">
+        <div class="first-left">
+          <img src="images/gear.png" alt="" />
+        </div>
+        <div class="first-left products-info">
+          <h1>Featured products at one place</h1>
+          <p>
+            Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim
+            velit mollit. Exercitation veniam consequat sunt nostrud amet.
+          </p>
+          <a class="forth-ancor" href="">Join Now<i class="bx bx-right-arrow-alt"></i></a>
+        </div>
+      </section>
+      <!-- fourth sectio end -->
     </main>
     <!-- main end -->
   </body>
