--- a/index.html
+++ b/index.html
@@ -308,5 +308,21 @@
       <!-- fourth sectio end -->
     </main>
     <!-- main end -->
+    <!-- footer start -->
+    <footer>
+      <div class="footer-div">
+        <h2>Influencer products</h2>
+        <p>Copyright © 2020 influencer products</p>
+        <p>All rights reserved</p>
+        <div class="icon">
+          <i class="bx bxl-instagram icon"></i>
+          <i class="bx bxl-dribbble  icon"></i>
+          <i class="bx bxl-twitter   icon"></i>
+          <i class="bx bxl-youtube   icon"></i>
+        </div>
+      </footer>
+      </div>
+      
+    <!-- footer end -->
   </body>
 </html>
